tui/src/ui/snapshots/ai_skill__ui__ssh_panel__tests__snapshot_ssh_panel_connected.snap
---
source: tui/src/ui/ssh_panel.rs
expression: terminal.backend().buffer().clone()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "┌ SSH Remote Management ───────────────────────────────────────────────────────┐",
        "│┌Hosts────────────────────────┐┌Details──────────────────────────────────────┐│",
        "││▸ dev-box                    ││Host: dev-box                                ││",
        "││  prod                       ││SSH: dev.example.com                         ││",
        "││                             ││                                             ││",
        "││                             ││Status: Connected                            ││",
        "││                             ││                                             ││",
        "││                             ││Skills (2):                                  ││",
        "││                             ││    git-workflow                             ││",
        "││                             ││   ⚠ review                                  ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "│└─────────────────────────────┘└─────────────────────────────────────────────┘│",
        "└──────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 24, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 46, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 8, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 44, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
